implemented JPA repo
